# B-U585I-IOT2A_EMW

./: .gitignore  LICENSE.md  README.md
applications/emw/: AppConsoleDownload.cpp  AppConsoleDownload.hpp  AppConsoleEcho.cpp  AppConsoleEcho.hpp  AppConsolePing.cpp  AppConsolePing.hpp  AppConsoleScan.cpp  AppConsoleScan.hpp  AppConsoleStats.cpp  AppConsoleStats.hpp  AppConsoleTls.cpp  AppConsoleTls.hpp  AppWiFiEmw.cpp  AppWiFiEmw.hpp
applications/lwip/: AppConsoleDownload.cpp  AppConsoleDownload.hpp  AppConsoleEcho.cpp  AppConsoleEcho.hpp  AppConsoleIperf.cpp  AppConsoleIperf.hpp  AppConsolePing.cpp  AppConsolePing.hpp  AppConsoleScan.cpp  AppConsoleScan.hpp  AppConsoleStats.cpp  AppConsoleStats.hpp  AppDhcpService.cpp  AppDhcpService.hpp  AppHttpSSE.cpp  AppHttpSSE.hpp  AppLwipServices.cpp  AppLwipServices.hpp  AppWiFiLwip.cpp  AppWiFiLwip.hpp  lwipopts.h
applications/lwip/lwip_wifi/emw/: WiFiNetwork.cpp  WiFiNetwork.hpp
cmake_emw_spi_freertos/: CMakeLists.txt
cmake_emw_spi_lwip_freertos/: CMakeLists.txt
cmake_emw_spi_no_os/: CMakeLists.txt
cmake_hardware_board/: arm-gcc-cortex-toolchain.cmake
core/inc/: Console.hpp  FreeRTOSConfig.h  app_freertos.h  dcache.h  gpdma.h  gpio.h  icache.h  main.hpp  rng.h  spi.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  tim.h  usart.h
core/src/: Console.cpp  app_freertos.c  dcache.c  gpdma.c  gpio.c  icache.c  main.cpp  rng.c  spi.c  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c  system_stm32u5xx.c  tim.c  usart.c
drivers/cmsis/include/: cachel1_armv7.h  cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h
drivers/emw/: EmwAddress.cpp  EmwAddress.hpp  EmwApiBase.hpp  EmwApiCore.cpp  EmwApiCore.hpp  EmwApiEmw.cpp  EmwApiEmw.hpp  EmwApiEmwBypass.cpp  EmwApiEmwBypass.hpp  EmwCoreHci.cpp  EmwCoreHci.hpp  EmwCoreIpc.cpp  EmwCoreIpc.hpp  EmwIoHardware.cpp  EmwIoHardware.hpp  EmwIoInterface.hpp  EmwIoSpi.cpp  EmwIoSpi.hpp  EmwNetworkEmwImplementation.cpp  EmwNetworkLwipImplementation.cpp  EmwNetworkStack.hpp  EmwOsFreeRTOSImplementation.cpp  EmwOsInterface.hpp  EmwOsNoOSImplementation.cpp  emw_conf.hpp
drivers/stm32u5xx_hal_driver/inc/: stm32u5xx_hal.h  stm32u5xx_hal_cortex.h  stm32u5xx_hal_dcache.h  stm32u5xx_hal_def.h  stm32u5xx_hal_dma.h  stm32u5xx_hal_dma_ex.h  stm32u5xx_hal_exti.h  stm32u5xx_hal_flash.h  stm32u5xx_hal_flash_ex.h  stm32u5xx_hal_gpio.h  stm32u5xx_hal_gpio_ex.h  stm32u5xx_hal_gtzc.h  stm32u5xx_hal_i2c.h  stm32u5xx_hal_i2c_ex.h  stm32u5xx_hal_icache.h  stm32u5xx_hal_pwr.h  stm32u5xx_hal_pwr_ex.h  stm32u5xx_hal_rcc.h  stm32u5xx_hal_rcc_ex.h  stm32u5xx_hal_rng.h  stm32u5xx_hal_rng_ex.h  stm32u5xx_hal_spi.h  stm32u5xx_hal_spi_ex.h  stm32u5xx_hal_tim.h  stm32u5xx_hal_tim_ex.h  stm32u5xx_hal_uart.h  stm32u5xx_hal_uart_ex.h  stm32u5xx_ll_bus.h  stm32u5xx_ll_cortex.h  stm32u5xx_ll_crs.h  stm32u5xx_ll_dcache.h  stm32u5xx_ll_dma.h  stm32u5xx_ll_exti.h  stm32u5xx_ll_gpio.h  stm32u5xx_ll_icache.h  stm32u5xx_ll_lpuart.h  stm32u5xx_ll_pwr.h  stm32u5xx_ll_rcc.h  stm32u5xx_ll_rng.h  stm32u5xx_ll_spi.h  (+4 more)
drivers/stm32u5xx_hal_driver/inc/Legacy/: stm32_hal_legacy.h
drivers/stm32u5xx_hal_driver/src/: stm32u5xx_hal.c  stm32u5xx_hal_cortex.c  stm32u5xx_hal_dcache.c  stm32u5xx_hal_dma.c  stm32u5xx_hal_dma_ex.c  stm32u5xx_hal_exti.c  stm32u5xx_hal_flash.c  stm32u5xx_hal_flash_ex.c  stm32u5xx_hal_gpio.c  stm32u5xx_hal_gtzc.c  stm32u5xx_hal_i2c.c  stm32u5xx_hal_i2c_ex.c  stm32u5xx_hal_icache.c  stm32u5xx_hal_pwr.c  stm32u5xx_hal_pwr_ex.c  stm32u5xx_hal_rcc.c  stm32u5xx_hal_rcc_ex.c  stm32u5xx_hal_rng.c  stm32u5xx_hal_rng_ex.c  stm32u5xx_hal_spi.c  stm32u5xx_hal_spi_ex.c  stm32u5xx_hal_tim.c  stm32u5xx_hal_tim_ex.c  stm32u5xx_hal_uart.c  stm32u5xx_hal_uart_ex.c
lib/: newlib_lock_glue.c  stdin_uart.c  stdio_uart.c  stdio_uart.h  stdout_uart.c  stm32_lock.h  syscalls.c  sysmem.c
middlewares/freertos/source/: croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
middlewares/freertos/source/include/: FreeRTOS.h  StackMacros.h  atomic.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  mpu_wrappers.h  newlib-freertos.h  picolibc-freertos.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
middlewares/freertos/source/portable/MemMang/: heap_4.c
middlewares/lwip/contrib/ports/freertos/: sys_arch.c
middlewares/lwip/src/api/: api_lib.c  api_msg.c  err.c  if_api.c  netbuf.c  netdb.c  netifapi.c  sockets.c  tcpip.c
middlewares/lwip/src/apps/altcp_tls/: altcp_tls_mbedtls.c  altcp_tls_mbedtls_mem.c  altcp_tls_mbedtls_mem.h  altcp_tls_mbedtls_structs.h
middlewares/lwip/src/apps/http/: altcp_proxyconnect.c  fs.c  fsdata.c  http_client.c  httpd.c  httpd_structs.h
middlewares/lwip/src/apps/lwiperf/: lwiperf.c
middlewares/lwip/src/apps/mdns/: mdns.c
middlewares/lwip/src/apps/mqtt/: mqtt.c
middlewares/lwip/src/apps/netbiosns/: netbiosns.c
middlewares/lwip/src/apps/smtp/: smtp.c
middlewares/lwip/src/apps/snmp/: snmp_asn1.c  snmp_asn1.h  snmp_core.c  snmp_core_priv.h  snmp_mib2.c  snmp_mib2_icmp.c  snmp_mib2_interfaces.c  snmp_mib2_ip.c  snmp_mib2_snmp.c  snmp_mib2_system.c  snmp_mib2_tcp.c  (+14 more)
middlewares/lwip/src/core/: altcp.c  altcp_alloc.c  altcp_tcp.c  def.c  dns.c  inet_chksum.c  init.c  ip.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  stats.c  sys.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
middlewares/lwip/src/netif/: bridgeif.c  bridgeif_fdb.c  ethernet.c  lowpan6.c  lowpan6_ble.c  lowpan6_common.c  slipif.c  zepif.c
stm32_cube_ide_emw_spi_freertos/: .cproject  .project  STM32U585AIIXQ_FLASH.ld
stm32_cube_ide_emw_spi_lwip_freertos/: .cproject  .project  STM32U585AIIXQ_FLASH.ld
stm32_cube_ide_emw_spi_no_os/: .cproject  .project  STM32U585AIIXQ_FLASH.ld
(+203 files in other folders)
